--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,4 @@
-<p>about works!</p>
+<article>
+  <h1>Moview DB</h1>
+  <p>This application is an example of Angular Material project</p>
+</article>
